adding proof of concept glimmer component that fetches data

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,16 @@
 	<script src="/assets/js/skel.min.js"></script>
 	<script src="/assets/js/skel-panels.min.js"></script>
 	<script src="/assets/js/init.js"></script>
+
+	<!-- Glimmer must load after DOM has initialized -->
+	<script src="/assets/demo-glimmer/app.js" defer></script>
+	
 	<noscript>
 		<link rel="stylesheet" href="/assets/css/skel-noscript.css" />
 		<link rel="stylesheet" href="/assets/css/style.css" />
 		<link rel="stylesheet" href="/assets/css/style-desktop.css" />
 	</noscript>
+	
 </head>
 <body>
 
@@ -58,6 +63,7 @@
 			</ul>
 		</section>
 	</div>
+
 </div>
 
 </body>
