--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 
 			<!-- Logo -->
 			<div id="logo">
-				<h1><a href="#">bcorporation.net</a></h1>
+				<h1><a href="https://bcorporation.net">bcorporation.net</a></h1>
 			</div>
 		</div>
 	</div>
@@ -56,10 +56,10 @@
 				<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span>
 			</header>
 			<ul class="contact">
-				<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
-				<li class="active"><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
-				<li><a href="#" class="fa fa-dribbble"><span>Pinterest</span></a></li>
-				<li><a href="#" class="fa fa-tumblr"><span>Google+</span></a></li>
+				<li><a href="https://google.com" class="fa fa-twitter"><span>Twitter</span></a></li>
+				<li class="active"><a href="https://google.com" class="fa fa-facebook"><span>Facebook</span></a></li>
+				<li><a href="https://google.com" class="fa fa-dribbble"><span>Pinterest</span></a></li>
+				<li><a href="https://google.com" class="fa fa-tumblr"><span>Google+</span></a></li>
 			</ul>
 		</section>
 	</div>
